--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-/Logistic Regression_Generalized Linear Models/Linear_regression_code/a.txt
+/Logistic Regression_Generalized Linear Models/Linear_regression_code/dataset/*
