code - logistic regression - batch gradient descent

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /Logistic Regression_Generalized Linear Models/Linear_regression_code/dataset/*
+/Logistic Regression_Generalized Linear Models/Linear_regression_code/__pycache__
+/Logistic Regression_Generalized Linear Models/Linear_regression_code/.ipynb_checkpoints
